--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,17 +28,19 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/PBOFinalProject.jar
+dist.jar=${dist.dir}/PBOFinalProject-Admin.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/PBOFinalProject
+dist.jlink.output=${dist.jlink.dir}/PBOFinalProject-Admin
 excludes=
 file.reference.mysql-connector-j-8.0.31.jar=/home/agusdharma/Downloads/MySqlJdbcDriver/mysql-connector-j-8.0.31.jar
+file.reference.mysql-connector-j-8.0.31.jar-1=lib\\mysql-connector-j-8.0.31.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-j-8.0.31.jar}:\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.mysql-connector-j-8.0.31.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -73,7 +75,7 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=PBOFinalProject
+jlink.launcher.name=PBOFinalProject-Admin
 main.class=com.kelompok3.App
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
